# securechain-ssc-ingestion

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  template.env
.github/workflows/: lint-test.yml  py_analisys.yml  release.yml  test.yml
dagster_home/: dagster.yaml  workspace.yaml
src/: cache.py  database.py  dependencies.py  logger.py  session.py  settings.py
src/dagster_app/: __init__.py  schedules.py
src/dagster_app/assets/: __init__.py  cargo_assets.py  maven_assets.py  npm_assets.py  nuget_assets.py  pypi_assets.py  redis_queue_assets.py  rubygems_assets.py
src/dagster_app/resources/: __init__.py
src/processes/extractors/: __init__.py  base.py  cargo_extractor.py  maven_extractor.py  npm_extractor.py  nuget_extractor.py  pypi_extractor.py  rubygems_extractor.py
src/processes/updaters/: __init__.py  cargo_version_updater.py  maven_version_updater.py  npm_version_updater.py  nuget_version_updater.py  pypi_version_updater.py  rubygems_version_updater.py
src/schemas/: __init__.py  cargo_package_schema.py  maven_package_schema.py  npm_package_schema.py  nuget_package_schema.py  package_message_schema.py  pypi_package_schema.py  rubygems_package_schema.py
src/services/: __init__.py
src/services/apis/: __init__.py  cargo_api.py  cargo_service.py  maven_api.py  maven_service.py  npm_api.py  npm_service.py  nuget_api.py  nuget_service.py  pypi_api.py  pypi_service.py  rubygems_api.py  rubygems_service.py
src/services/dbs/: __init__.py  databases.py
src/services/graph/: __init__.py  package_service.py  version_service.py
src/services/vulnerability/: __init__.py  vulnerability_service.py
src/utils/: __init__.py  attributor.py  orderer.py  pypi_constraints_parser.py  redis_queue.py  repo_normalizer.py
src/utils/maven/: Dockerfile.maven  automate_maven_extraction.py
