[project]
name = "securechain-ssc-ingestion"
version = "1.1.0"
description = "SecureChain SSC Ingestion Service"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "dagster==1.12.3",
    "dagster-webserver==1.12.3",
    "dagster-postgres==0.28.3",
    "redis==7.1.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "neo4j==6.0.3",
    "pymongo==4.15.4",
    "aiocache==0.12.3",
    "aiohttp==3.13.2",
    "univers==31.1.0",
    "psycopg2-binary==2.9.11",
    "regex==2025.11.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.6",
]
test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "B",    # bugbear: security warnings
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # the ruff developer's own rules
]

ignore = [
    "E501",  # Supress line-too-long warnings: trust black's judgement on this one
    "C901",  # Complex structure
    "A004",  # Module attribute shadowing
    "B008",  # Function calls in argument defaults
]
